--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/src/PortFreight/PortFreight.Api/appsettings.json
+/src/PortFreight/PortFreight.Api/appsettings.Development.json
