--- a/src/PortFreight/PortFreight.Api/PortFreight.Api.csproj
+++ b/src/PortFreight/PortFreight.Api/PortFreight.Api.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PortFreight.Application\PortFreight.Application.csproj" />
     <ProjectReference Include="..\PortFreight.Infrastructure\PortFreight.Infrastructure.csproj" />
   </ItemGroup>
 
