--- a/src/PortFreight/PortFreight.MVC/Properties/launchSettings.json
+++ b/src/PortFreight/PortFreight.MVC/Properties/launchSettings.json
@@ -1,12 +1,11 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "PortFreight.Api": {
+    "PortFreight.MVC": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7014",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7262",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
