--- a/src/PortFreight/PortFreight.Api/PortFreight.Api.csproj
+++ b/src/PortFreight/PortFreight.Api/PortFreight.Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.24">
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PortFreight.Application\PortFreight.Application.csproj" />
+    <ProjectReference Include="..\PortFreight.Identity\PortFreight.Identity.csproj" />
     <ProjectReference Include="..\PortFreight.Infrastructure\PortFreight.Infrastructure.csproj" />
   </ItemGroup>
 
